--- a/CollectionViewsDemo/Sources/CollectionViewsDemo.storyboard
+++ b/CollectionViewsDemo/Sources/CollectionViewsDemo.storyboard
@@ -403,5 +403,147 @@
             </objects>
             <point key="canvasLocation" x="1109" y="1191"/>
         </scene>
+        <!--Header Footer Collection View Controller-->
+        <scene sceneID="9Ob-PT-dfb">
+            <objects>
+                <viewController storyboardIdentifier="HeaderFooterCollectionViewController" id="Ggt-4p-q7q" customClass="HeaderFooterCollectionViewController" customModule="CollectionViewsDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qGc-tk-j0w"/>
+                        <viewControllerLayoutGuide type="bottom" id="2mU-Ic-BA7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qgi-nh-edJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hUt-vE-QOg">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rlS-p7-msI">
+                                    <size key="itemSize" width="250" height="107"/>
+                                    <size key="headerReferenceSize" width="50" height="50"/>
+                                    <size key="footerReferenceSize" width="50" height="50"/>
+                                    <inset key="sectionInset" minX="15" minY="15" maxX="15" maxY="15"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ApplicationIconNameCollectionViewCell" id="OTs-ai-yQp" customClass="ApplicationIconNameCollectionViewCell" customModule="CollectionViewsDemo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="110" height="119"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="anc-LC-Iwo" userLabel="Icon">
+                                                    <rect key="frame" x="8" y="0.0" width="94" height="94"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="anc-LC-Iwo" secondAttribute="height" id="sZA-Cw-b3D"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="15"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                            <real key="value" value="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4gM-40-mJW" userLabel="Name">
+                                                    <rect key="frame" x="0.0" y="99" width="110" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="4gM-40-mJW" secondAttribute="trailing" id="140-oQ-OQQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="anc-LC-Iwo" secondAttribute="trailing" constant="8" id="G76-fq-cm1"/>
+                                            <constraint firstItem="anc-LC-Iwo" firstAttribute="leading" secondItem="OTs-ai-yQp" secondAttribute="leading" constant="8" id="JQh-1Z-YuQ"/>
+                                            <constraint firstItem="anc-LC-Iwo" firstAttribute="leading" secondItem="OTs-ai-yQp" secondAttribute="leading" constant="5" id="MlL-4h-0Jb"/>
+                                            <constraint firstAttribute="trailing" secondItem="anc-LC-Iwo" secondAttribute="trailing" constant="5" id="Pta-Wi-Pjz"/>
+                                            <constraint firstItem="4gM-40-mJW" firstAttribute="leading" secondItem="OTs-ai-yQp" secondAttribute="leading" id="Z5w-a2-c4g"/>
+                                            <constraint firstItem="4gM-40-mJW" firstAttribute="top" secondItem="anc-LC-Iwo" secondAttribute="bottom" constant="5" id="iMN-1e-Eu7"/>
+                                            <constraint firstAttribute="centerX" secondItem="anc-LC-Iwo" secondAttribute="centerX" id="lva-WI-9ls"/>
+                                            <constraint firstAttribute="bottom" secondItem="4gM-40-mJW" secondAttribute="bottom" constant="5" id="uqS-Ug-S5G"/>
+                                            <constraint firstItem="anc-LC-Iwo" firstAttribute="top" secondItem="OTs-ai-yQp" secondAttribute="top" id="yxa-Hs-htr"/>
+                                        </constraints>
+                                        <size key="customSize" width="110" height="119"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="Pta-Wi-Pjz"/>
+                                                <exclude reference="MlL-4h-0Jb"/>
+                                                <exclude reference="uqS-Ug-S5G"/>
+                                            </mask>
+                                        </variation>
+                                        <connections>
+                                            <outlet property="iconImageView" destination="anc-LC-Iwo" id="kdr-bW-Pty"/>
+                                            <outlet property="nameLabel" destination="4gM-40-mJW" id="I5a-wb-y3h"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ApplicationHeaderCollectionReusableView" id="7PS-2O-m62" customClass="ApplicationHeaderCollectionReusableView" customModule="CollectionViewsDemo" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Header title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKL-zo-Sdn">
+                                            <rect key="frame" x="8" y="15" width="584" height="20"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="XKL-zo-Sdn" firstAttribute="leading" secondItem="7PS-2O-m62" secondAttribute="leading" constant="8" id="SRn-cH-q23"/>
+                                        <constraint firstAttribute="centerY" secondItem="XKL-zo-Sdn" secondAttribute="centerY" id="WyM-xS-mbZ"/>
+                                        <constraint firstAttribute="trailing" secondItem="XKL-zo-Sdn" secondAttribute="trailing" constant="8" id="xbO-gX-EID"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="titleLabel" destination="XKL-zo-Sdn" id="JBi-0a-GTQ"/>
+                                        <outlet property="titleLabelConstraintLeft" destination="SRn-cH-q23" id="zkc-L8-ntg"/>
+                                    </connections>
+                                </collectionReusableView>
+                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="ApplicationFooterCollectionReusableView" reuseIdentifier="ApplicationFooterCollectionReusableView" id="9JI-32-lYD" customClass="ApplicationFooterCollectionReusableView" customModule="CollectionViewsDemo" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="199" width="600" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Footer title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Cr-8Z-aew">
+                                            <rect key="frame" x="8" y="20" width="584" height="10"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="4Cr-8Z-aew" secondAttribute="trailing" constant="8" id="O9k-ng-zgj"/>
+                                        <constraint firstAttribute="centerY" secondItem="4Cr-8Z-aew" secondAttribute="centerY" id="V9i-j5-iR6"/>
+                                        <constraint firstItem="4Cr-8Z-aew" firstAttribute="leading" secondItem="9JI-32-lYD" secondAttribute="leading" constant="8" id="wed-ow-7FY"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="titleLabel" destination="4Cr-8Z-aew" id="s5K-Rg-Z3x"/>
+                                    </connections>
+                                </collectionReusableView>
+                                <connections>
+                                    <outlet property="dataSource" destination="Ggt-4p-q7q" id="VVo-fr-0E8"/>
+                                    <outlet property="delegate" destination="Ggt-4p-q7q" id="Vtm-LS-bru"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="2mU-Ic-BA7" firstAttribute="top" secondItem="hUt-vE-QOg" secondAttribute="bottom" id="2js-mf-vBS"/>
+                            <constraint firstItem="hUt-vE-QOg" firstAttribute="leading" secondItem="qgi-nh-edJ" secondAttribute="leading" id="Wpt-jR-CYU"/>
+                            <constraint firstAttribute="trailing" secondItem="hUt-vE-QOg" secondAttribute="trailing" id="e0w-mP-RCw"/>
+                            <constraint firstItem="hUt-vE-QOg" firstAttribute="top" secondItem="qgi-nh-edJ" secondAttribute="top" id="nlj-Zn-Msd"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="l13-Fs-6Gk"/>
+                    <connections>
+                        <outlet property="collectionView" destination="hUt-vE-QOg" id="mu5-vg-9y7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7fB-e1-HcV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1109" y="1863"/>
+        </scene>
     </scenes>
 </document>
