--- a/CollectionViewsDemo/Sources/CollectionViewsDemo.storyboard
+++ b/CollectionViewsDemo/Sources/CollectionViewsDemo.storyboard
@@ -401,7 +401,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xpv-eh-EiK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1109" y="1191"/>
+            <point key="canvasLocation" x="289" y="1207"/>
         </scene>
         <!--Header Footer Collection View Controller-->
         <scene sceneID="9Ob-PT-dfb">
@@ -470,8 +470,8 @@
                                         <size key="customSize" width="110" height="119"/>
                                         <variation key="default">
                                             <mask key="constraints">
-                                                <exclude reference="Pta-Wi-Pjz"/>
                                                 <exclude reference="MlL-4h-0Jb"/>
+                                                <exclude reference="Pta-Wi-Pjz"/>
                                                 <exclude reference="uqS-Ug-S5G"/>
                                             </mask>
                                         </variation>
@@ -488,7 +488,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Header title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKL-zo-Sdn">
                                             <rect key="frame" x="8" y="15" width="584" height="20"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -510,7 +510,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Footer title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Cr-8Z-aew">
                                             <rect key="frame" x="8" y="20" width="584" height="10"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="8"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -543,7 +543,149 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7fB-e1-HcV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1109" y="1863"/>
+            <point key="canvasLocation" x="1109" y="1207"/>
+        </scene>
+        <!--Decoration Collection View Controller-->
+        <scene sceneID="jxs-9g-bro">
+            <objects>
+                <viewController storyboardIdentifier="DecorationCollectionViewController" id="JW9-Zk-DVx" customClass="DecorationCollectionViewController" customModule="CollectionViewsDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UK8-Qd-ERM"/>
+                        <viewControllerLayoutGuide type="bottom" id="Iqo-Rf-D3T"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="frt-RU-lxW">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qZ3-mj-bU4">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yoj-gh-ynj">
+                                    <size key="itemSize" width="250" height="107"/>
+                                    <size key="headerReferenceSize" width="50" height="50"/>
+                                    <size key="footerReferenceSize" width="50" height="50"/>
+                                    <inset key="sectionInset" minX="15" minY="15" maxX="15" maxY="15"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ApplicationIconNameCollectionViewCell" id="FdM-Aj-LsX" customClass="ApplicationIconNameCollectionViewCell" customModule="CollectionViewsDemo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="110" height="119"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zA2-SP-PU7" userLabel="Icon">
+                                                    <rect key="frame" x="8" y="0.0" width="94" height="94"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="zA2-SP-PU7" secondAttribute="height" id="RkF-Kr-SIX"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="15"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                            <real key="value" value="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSF-AI-6TR" userLabel="Name">
+                                                    <rect key="frame" x="0.0" y="99" width="110" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="centerX" secondItem="zA2-SP-PU7" secondAttribute="centerX" id="4NC-7E-46U"/>
+                                            <constraint firstAttribute="trailing" secondItem="zA2-SP-PU7" secondAttribute="trailing" constant="8" id="BAS-MX-Z2B"/>
+                                            <constraint firstItem="zA2-SP-PU7" firstAttribute="leading" secondItem="FdM-Aj-LsX" secondAttribute="leading" constant="8" id="CQK-el-bZX"/>
+                                            <constraint firstAttribute="trailing" secondItem="TSF-AI-6TR" secondAttribute="trailing" id="LmK-6x-kg1"/>
+                                            <constraint firstItem="zA2-SP-PU7" firstAttribute="leading" secondItem="FdM-Aj-LsX" secondAttribute="leading" constant="5" id="MkR-Uk-fvc"/>
+                                            <constraint firstItem="TSF-AI-6TR" firstAttribute="leading" secondItem="FdM-Aj-LsX" secondAttribute="leading" id="RZE-3M-Ynw"/>
+                                            <constraint firstItem="TSF-AI-6TR" firstAttribute="top" secondItem="zA2-SP-PU7" secondAttribute="bottom" constant="5" id="dr3-Tl-yJi"/>
+                                            <constraint firstAttribute="trailing" secondItem="zA2-SP-PU7" secondAttribute="trailing" constant="5" id="gvv-mV-CbO"/>
+                                            <constraint firstAttribute="bottom" secondItem="TSF-AI-6TR" secondAttribute="bottom" constant="5" id="jNh-an-v7L"/>
+                                            <constraint firstItem="zA2-SP-PU7" firstAttribute="top" secondItem="FdM-Aj-LsX" secondAttribute="top" id="rXP-K6-COr"/>
+                                        </constraints>
+                                        <size key="customSize" width="110" height="119"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="MkR-Uk-fvc"/>
+                                                <exclude reference="gvv-mV-CbO"/>
+                                                <exclude reference="jNh-an-v7L"/>
+                                            </mask>
+                                        </variation>
+                                        <connections>
+                                            <outlet property="iconImageView" destination="zA2-SP-PU7" id="31D-ec-ekp"/>
+                                            <outlet property="nameLabel" destination="TSF-AI-6TR" id="tNi-66-Ilx"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ApplicationHeaderCollectionReusableView" id="R3H-69-m1v" customClass="ApplicationHeaderCollectionReusableView" customModule="CollectionViewsDemo" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Header title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oor-gY-bsO">
+                                            <rect key="frame" x="8" y="15" width="584" height="20"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="centerY" secondItem="Oor-gY-bsO" secondAttribute="centerY" id="5Oo-Ss-FBX"/>
+                                        <constraint firstItem="Oor-gY-bsO" firstAttribute="leading" secondItem="R3H-69-m1v" secondAttribute="leading" constant="8" id="bVD-J0-RzD"/>
+                                        <constraint firstAttribute="trailing" secondItem="Oor-gY-bsO" secondAttribute="trailing" constant="8" id="ppV-OD-k2s"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="titleLabel" destination="Oor-gY-bsO" id="bSW-Wk-m10"/>
+                                        <outlet property="titleLabelConstraintLeft" destination="bVD-J0-RzD" id="NNH-8M-yad"/>
+                                    </connections>
+                                </collectionReusableView>
+                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="ApplicationFooterCollectionReusableView" reuseIdentifier="ApplicationFooterCollectionReusableView" id="Q1X-tG-uIb" customClass="ApplicationFooterCollectionReusableView" customModule="CollectionViewsDemo" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="199" width="600" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Footer title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ARI-bf-Hwi">
+                                            <rect key="frame" x="8" y="20" width="584" height="10"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ARI-bf-Hwi" firstAttribute="leading" secondItem="Q1X-tG-uIb" secondAttribute="leading" constant="8" id="9mo-gT-qXS"/>
+                                        <constraint firstAttribute="centerY" secondItem="ARI-bf-Hwi" secondAttribute="centerY" id="I34-qL-TnQ"/>
+                                        <constraint firstAttribute="trailing" secondItem="ARI-bf-Hwi" secondAttribute="trailing" constant="8" id="MY9-7h-Eya"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="titleLabel" destination="ARI-bf-Hwi" id="s6F-E1-YT9"/>
+                                    </connections>
+                                </collectionReusableView>
+                                <connections>
+                                    <outlet property="dataSource" destination="JW9-Zk-DVx" id="Yeh-Me-gcA"/>
+                                    <outlet property="delegate" destination="JW9-Zk-DVx" id="Vck-qr-jXl"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="qZ3-mj-bU4" firstAttribute="leading" secondItem="frt-RU-lxW" secondAttribute="leading" id="5v7-hd-jLd"/>
+                            <constraint firstAttribute="trailing" secondItem="qZ3-mj-bU4" secondAttribute="trailing" id="HLV-29-13r"/>
+                            <constraint firstItem="qZ3-mj-bU4" firstAttribute="top" secondItem="frt-RU-lxW" secondAttribute="top" id="YrF-KE-Qa5"/>
+                            <constraint firstItem="Iqo-Rf-D3T" firstAttribute="top" secondItem="qZ3-mj-bU4" secondAttribute="bottom" id="ZP2-n7-nJg"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="eTW-He-0pq"/>
+                    <connections>
+                        <outlet property="collectionView" destination="qZ3-mj-bU4" id="Ney-WA-82l"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bz3-1u-sCl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="289" y="1885"/>
         </scene>
     </scenes>
 </document>
